<resources>
    <string name="app_name">Friends</string>
    <string name="action_settings">Settings</string>

    <string name="delete_friend">Delete %1$s from your friends list?"</string>
    <string name="delete_database">Delete all your friend records?</string>
    <string name="exit_without_save">Discard changes?</string>

    <string name="dialog_delete">Delete</string>
    <string name="main_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete_database">Delete Database</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_save">Save</string>
    <string name="dialog_discard">discard</string>
    <string name="dialog_cancel">cancel</string>
    <string name="search_title">Search title</string>
    <string name="text_search">Search</string>
    <string name="title_search_friend">Search Friend</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_edit_friend">Edit Friend</string>
</resources>
