<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="bamtastic.friends.MainActivity">

    <item
        android:id="@+id/search_record"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="10"
        android:title="@string/main_search"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/add_record"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/delete_db"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_delete_database"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
</menu>
